<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">GoLocal</string>
    <string name="facebook_application_id">187809048306167</string>
    <string name="title_activity_kitchen_list">Kitchens near me</string>
    <string name="title_activity_kitchen_detail">Kitchen Detail</string>
    <string name="action_settings">Settings</string>
    <string name="range_set">Set Range</string>
    <string name="favourite_menu_option">Favourites</string>
    <string name="sign_out">Sign Out</string>
    <string name="title_activity_my_kitchen">My Kitchen</string>

    <string name="no_internet_title">Are you connected to internet?</string>
    <string name="no_internet_message">App could not connect to internet. You need to be connected to internet to sign in.</string>

    <!--titles-->

    <string name="chat_title">My chats</string>
    <string name="manage_title">My Kitchen</string>
    <string name="setup_kitchen_title">Setup Your Kitchen</string>
    <string name="kitchen_nearby_title">Kitchens near me</string>
    <string name="title_activity_add_dish">Add a Dish</string>
    <string name="add_dish_more_features">More options coming soon!</string>
    <string name="add_dish_action_button">DONE</string>

    <string name="setup_kitchen_add_image">Upload an image for your Kitchen</string>
    <string name="hint_kitchen_name">Give your kitchen a name</string>
    <string name="hint_kitchen_address">Enter your address</string>
    <string name="hint_kitchen_description">Add a description for your kitchen</string>
    <string name="setup_kitchen_action_button">PUBLISH KITCHEN</string>

    <string name="title_activity_chat">ChatActivity</string>
    <string name="type_your_message">Start typing</string>
    <string name="location_error_message">We need to get your location for you to publish the kitchen.</string>
    <string name="kitchen_published_message">Congratulations. Your kitchen has been published.</string>

    <string name="pref_range_default">10</string>
    <string name="pref_range_label">Hello blank fragment</string>
    <string name="pref_range_key">Hello blank fragment</string>

    <string name="not_signed_in">There was a problem signing you in.</string>
    <string name="price_with_rupees_currency">
       Rs. <xliff:g example="35" id="startup">%1$s</xliff:g>!
</string>
    <string name="error_occurred">Some error occurred, try again.</string>
    <string name="error_fields_not_filled">Please fill all the fields.</string>
    <string name="chat_with_own_kitchen">You cannot chat with your own kitchen.</string>
    <string name="dish_saved">Dish saved successfully.</string>

    <string name="range_less_than_zero">Please set a range greater than zero</string>

    <string name="enable_gps">Please enable gps to get kitchens near your area.</string>
    <string name="showing_favourites">Showing your favourite kitchens</string>

    <string name="upload_image_error">There was an error while trying to upload image</string>

    <string name="kitchen_address_card_title">Address</string>
    <string name="kitchen_default_image">http://www.ikea.com/ms/media/cho_room/20153/kitchen/20153_cosk07a/20153_cosk07a_01_PH124156.jpg</string>
    <string name="kitchen_rating_card_title">Kitchen Rating</string>
  <string name="user_rating_count">
       (<xliff:g example="35" id="startup">%1$s</xliff:g>)
</string>
    <string name="title_widget">My Favourite Kitchens</string>
    <string name="empty_favourite_list">No Favourite Kitchens to show</string>
    <string name="logging_in_text">Logging you in&#8230;</string>

    <string name="kitchen_share_text">Hey there, I just found a great kitchen at GoLocal Kitchens. Check it out.. \n
    <xliff:g example="Barbeque Nation" id="kitchenName">%1$s</xliff:g>\nDescription: <xliff:g example="Awesome food" id="description">%2$s</xliff:g>\nAddress: <xliff:g example="BTM Layout" id="address">%3$s</xliff:g></string>
    <string name="button_start_chat_text">CHAT</string>
    <string name="searching_location_text">Searching for location&#8230;</string>
    <string name="kitchen_detail_desc">Description</string>
    <string name="kitchen_detail_user_rating_header">You</string>
    <string name="kitchen_detail_overall_rating_header">Overall</string>
    <string name="kitchen_menu_title">Add your dishes here&#8230;</string>
    <string name="name_of_the_dish">Name of the dish</string>
    <string name="price_hint">Price</string>
    <string name="is_non_vegetarian_hint">Non-Vegetarian?</string>
    <string name="menu_share_kitchen">Share Kitchen</string>
    <string name="no_kitchens_found">No Kitchens found nearby. Be the first to publish a kitchen in your area or increase range from the Menu options.</string>
    <string name="no_dishes_yet">You have not added any dish as yet. Start adding now. </string>
    <string name="no_chats_yet">You have not chatted with any kitchen or customer yet. Find your favourite kitchen and connect with them instantly.</string>
    <string name="allow_write_permission"> You need to allow write permissions to upload image
   </string>

    <!--Content Descriptions-->
    <string name="cd_kitchen_image">Kitchen Image</string>
    <string name="cd_user_image">Message sender\'s image</string>
    <string name="cd_image_in">Shared image by the user</string>
    <string name="cd_image_out">Shared image by you</string>
    <string name="cd_logo">GoLocal logo</string>
    <string name="cd_tab_setup_kitchen">Setup kitchen tab</string>
    <string name="cd_tab_chats">Chats tab</string>
    <string name="cd_tab_manage_kitchen">Manage your kitchen tab</string>
    <string name="cd_tab_nearby_kitchens">Nearby kitchens tab</string>
    <string name="cd_food_type_vegetarian">Vegetarian food item</string>
    <string name="cd_food_type_non_vegetarian">Non-Vegetarian food item</string>
    <string name="cd_star">Rating stars out of 5</string>
    <string name="cd_favourite">Kitchen saved as favourite</string>
    <string name="cd_not_favourite">Kitchen not favourite</string>
    <string name="cd_send_picture">Button to share a picture</string>
    <string name="cd_send_message">Button to send a message</string>


</resources>
