<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="space.ankan.golocal.screens.setupkitchen.SetupKitchenFragment">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:overScrollMode="always">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/upload_kitchen_image"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="horizontal">

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/kitchen_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_margin="8dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/manage_black" />

                    <ProgressBar
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/progress_bar"
                        android:visibility="gone"
                        android:layout_gravity="center" />

                </FrameLayout>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/setup_kitchen_add_image" />

            </LinearLayout>

            <EditText
                android:id="@+id/edit_kitchen_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:allowUndo="true"
                android:hint="@string/hint_kitchen_name"
                android:inputType="text" />

            <EditText
                android:id="@+id/edit_kitchen_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="top"
                android:hint="@string/hint_kitchen_description"
                android:maxLines="4" />

            <EditText
                android:id="@+id/edit_kitchen_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="top"
                android:hint="@string/hint_kitchen_address"
                android:maxLines="4" />


        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <Button
        android:id="@+id/setup_kitchen_action"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom"
        android:layout_margin="8dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:background="@color/primary_light"
        android:text="@string/setup_kitchen_action_button"
        android:textColor="@color/primary_text"
        android:textSize="20sp" />
</LinearLayout>