<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:orientation="vertical"
    android:paddingTop="?actionBarSize">

    <space.ankan.golocal.core.MyViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <LinearLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_gravity="bottom"
        android:background="#fff"
        android:elevation="32dp"
        android:minHeight="?actionBarSize"
        android:orientation="horizontal"
        android:paddingTop="1dp">

        <ImageView
            android:id="@+id/tab0"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:contentDescription="@string/cd_tab_setup_kitchen"
            android:scaleType="center"
            android:src="@drawable/setup_kitchen_black" />

        <ImageView
            android:id="@+id/tab1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/tab_select"
            android:contentDescription="@string/cd_tab_nearby_kitchens"
            android:scaleType="center"
            android:src="@drawable/kitchens_nearby_white" />

        <ImageView
            android:id="@+id/tab2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:contentDescription="@string/cd_tab_chats"
            android:scaleType="center"
            android:src="@drawable/chat_black" />

    </LinearLayout>
</LinearLayout>