<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_list">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/send_message_panel"
        app:layoutManager="LinearLayoutManager" />

    <LinearLayout
        android:id="@+id/send_message_panel"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/send_picture"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/cd_send_picture"
            android:layout_weight="1"
            android:clickable="true"
            android:src="@drawable/ic_add_a_photo_black"
            android:visibility="gone" />

        <EditText
            android:id="@+id/entered_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/spacing_large"
            android:layout_weight="5"
            android:background="@android:color/transparent"
            android:ems="10"
            android:hint="@string/type_your_message"
            android:inputType="textMultiLine"
            android:theme="@style/AppTheme.NoActionBar" />

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/send_message"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:padding="@dimen/spacing_medium_large"
                android:contentDescription="@string/cd_send_message"
                android:src="@drawable/ic_send_black_18dp" />
        </FrameLayout>

    </LinearLayout>
</RelativeLayout>